# dSIB-Z-Si-firmware

./: .gitignore  CMakeLists.txt  README.md  dSIB-Z-Si-firmware.ino  makefile  sketch.yaml
cmake/: gcc-arm-none-eabi.cmake
config/: stm32g4xx_hal_conf.h
inc/: board.h  main.h  stm32g4xx_it.h  usb_device.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
ld/: STM32G474CB_FLASH.ld
src/: board_init.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
